<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/mainbackimg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/huaqin_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/current_level" />
            <TextView
                android:id="@+id/battery_level"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="0%" />
            <Button
                android:id="@+id/refresh_level"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="@string/refresh_level"
                android:onClick="getBatteryLevel_main"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/target_level"
                    android:layout_weight="3"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:id="@+id/target_level"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/default_level"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1" >
                <SeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="10"/>
                <Button
                    android:id="@+id/discharge_by_level"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/discharge_by_level"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:gravity="center"
            android:text="@string/target_discharge_time"/>
        <EditText
            android:id="@+id/target_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/input_time"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:text="@string/default_time" />
        <Button
            android:id="@+id/discharge_by_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/start_discharge_by_time" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/play_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_music" />
        <CheckBox
            android:id="@+id/play_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_video" />
        <CheckBox
            android:id="@+id/record_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_video" />
        <CheckBox
            android:id="@+id/hardware_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hardware_control" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:gravity="bottom"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/discharge_by_scene"
                style="@android:style/ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_discharge"
                android:onClick="startDisCharge"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/stop_discharge"
                style="@android:style/ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_discharge"
                android:onClick="stopMainThreadDisCharge"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/update_data"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_data" />
    </LinearLayout>
</LinearLayout>